Fix: correctly position mobile final date and bump cache buster to v3

--- a/styles.css
+++ b/styles.css
@@ -330,7 +330,7 @@ header .credits a:hover {
         width: 55px;
     }
     .final-date {
-        top: 75px;
+        top: 55px;
         font-size: 8px;
     }
     .trophy-container.decided .trophy-icon {
